# Arkts-NAPI-Rust-Demo

./: README.md  build-profile.json5  oh-package.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: build-profile.json5  oh-package.json5
entry/src/main/ets/pages/: Index.ets
entry/src/main/resources/en_US/element/: string.json
entry/src/main/resources/zh_CN/element/: string.json
entry/src/main/rust/: Cargo.toml  build.rs  post_build.rs
entry/src/main/rust/src/: lib.rs
entry/src/main/rust/types/libcalculator/: index.d.ts  oh-package.json5
entry/src/main/rust/types/libhello/: oh-package.json5
